--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     /* Enable error reporting when local variables aren't read. */
     "skipLibCheck": true
     /* Skip type checking all .d.ts files. */
+    "resolveJsonModule": true
   }
 }
